<resources>
    <string name="app_name" translatable="false">CityHelper</string>
    <string name="welcome_alert">Welcome to the app</string>
    <string name="login">Login</string>
    <string name="login_message">Hi, welcome back!</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="notes">Your Notes</string>
    <string name="signup">Sign Up</string>
    <string name="map">Map</string>
    <string name="notes_menu">Notes</string>
    <string name="settings">Settings</string>
    <string name="my_notes">My notes</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="add_note">Add a note</string>
    <string name="save">Save</string>
    <string name="empty_not_saved">Note not saved because it is empty.</string>
    <string name="success">Note successfully added!</string>
    <string name="insuccess">Please fill out all fields.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="successUpdate">Note successfully updated!</string>
    <string name="edit_note">Edit Note</string>
    <string name="insuccess2">Note can\'t be added</string>
    <string name="insuccess3">Note not saved!</string>
    <string name="delete_all">All notes were deleted!</string>
    <string name="emailerror">Email is required</string>
    <string name="passworderror">Wrong password</string>
    <string name="loginerror">Wrong credentials</string>
    <string name="errorwebservice">Error making the request. Check your internet question</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAda9nKs3kOPIR8r8Kj_prLwRFoeQcG7FI</string>
    <string name="logout">Logout</string>
    <string name="pref_file_key" translatable="false">ipvc.estg.cityhelper.User</string>
    <string name="pref_is_user_login" translatable="false">isUserLogin</string>
    <string name="pref_email" translatable="false">email</string>
    <string name="pref_user_id" translatable="false">id_user</string>
    <string name="description_required">Description is required</string>
    <string name="error_uploading">error uploading</string>
    <string name="ok">Sucesso</string>
    <string name="problemDeleteError">error deleting</string>
    <string name="problemNotFound">problem not found</string>
    <string name="errordeletingmarker">Error deleting marker</string>
    <string name="markernotfound">Marker not found</string>
    <string name="markerdeleted">marker deleted</string>
    <string name="cancel">Cancel</string>
    <string name="delete_marker_confirm">Are you sure you want to delete?</string>
    <string name="marker_required">Marker required</string>
    <string name="nothing_changed">Nothing changed</string>
    <string name="error_updating_data">Error updating</string>
    <string name="empty_fields">Campos vazios</string>

</resources>